# team-43-app

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
GraphEase_最終成果物/backend/: main.py  rag.py  requirements-windows-lite.txt  storage.py  summarizer.py
GraphEase_最終成果物/backend/data/recordings/: 125cdb31-5db2-434a-8b84-4d3f619d4509.webm  31196bc4-1d78-41db-a8fa-0c7b675b4a0d.webm  40e9f3d5-93a1-48c2-89f5-ef9ff27140b6.webm  437d81c7-ea62-43d1-a7e9-d70f8d51f4f9.webm  5ba2c5cf-31e9-4b00-95a3-65fd36db53e1.webm  5db57192-3a32-469a-b6e9-6adede253237.webm  66df32f0-b543-4e98-b645-d0b2dbc19d5e.webm  6d22e7f9-d740-4ac8-a3a0-2374620267b3.webm  72f00771-e6d9-4f82-9d9d-faaeb1a1c2af.webm  (+16 more)
GraphEase_最終成果物/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.tsbuildinfo
preppal/: README.md
preppal/backend/: init.py  mailer.py  main.py  reminders.py  requirements-dev.txt  requirements.txt  storage.py  stt.py  summarizer.py  tts.py
preppal/backend/tests/: test_main.py
preppal/frontend/: index.html
preppal/frontend/assets/: app.js  style.css
preppal_決勝/backend/: __init__.py  main.py  requirements.txt  stt.py  summarizer.py
preppal_決勝/frontend/: index.html
preppal_決勝/frontend/app/: page.tsx
preppal_決勝/frontend/assets/: app.js  style.css
preppal_決勝/frontend/components/: audio-recorder.tsx  auth-wrapper.tsx  flashcard-study.tsx  notes-manager.tsx
preppal_決勝/tests/: test_recordings.py  test_transcribe.py  test_tts.py  test_upload.py
(+35 files in other folders)
