[project]
name = "team-43-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.2",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "openai-whisper>=20250625",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.lint.per-file-ignores]
# Allows unused import in __init__.py
"__init__.py" = ["E402", "F401"]
"tests/*" = ["F401"]

[tool.lint]
unfixable = ["F401"]
ignore = ["F841"]
select = [
    "E",  # pycodestyle
    "F",  # flake8
    "I"  # isort
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
